--- a/demopages/gallery/gallery.html
+++ b/demopages/gallery/gallery.html
@@ -157,9 +157,9 @@ footer{
             <div class="dropdown">
             <a class="dropbtn">Trends</a>
             <div class="dropdown-content">
-              <a href="/demopages/trends/biohealth.html">Bio and Health</a>
-              <a href="/demopages/trends/learning.html">Learning</a>
-              <a href="/demopages/trends/iot.html">Internet of Things (Iot)</a>
+              <a href="/ravenpauladrales/demopages/trends/biohealth.html">Bio and Health</a>
+              <a href="/ravenpauladrales/demopages/demopages/trends/learning.html">Learning</a>
+              <a href="/ravenpauladrales/demopages/demopages/trends/iot.html">Internet of Things (Iot)</a>
             </div>
           </div>
          </li>
