--- a/demopages/trends/learning.html
+++ b/demopages/trends/learning.html
@@ -70,7 +70,7 @@ h1 {
         <h1 id="title">Codecademy</h1>
         <p id="para1">Codecademy is an education company. They committed in building the learning experience of the future.</p>
         <div id="img-div">
-            <img src="https://lh3.google.com/u/0/d/1CnE8YfUINiPi-72lZl1BJRLkxc4R7WB5=w1920-h979-iv1" alt="Windows 11" width="770px">
+            <img src="https://lh3.google.com/u/0/d/1m_2AfYd-kj3SWFpIYX2QxCXXpDMUHK8w=w1227-h862-iv1" alt="Codecademy" width="770px">
             <figcaption>Codecademy is a website dedicated specifically to teaching coding. Where other coding sites follow an example/practice session workflow, Codecademy includes a live practice window. This means you can practice coding while still viewing the lesson material.</figcaption>
         </div>
         <div id="tribute-info">
