--- a/demopages/trends/learning.html
+++ b/demopages/trends/learning.html
@@ -70,7 +70,7 @@ h1 {
         <h1 id="title">Codecademy</h1>
         <p id="para1">Codecademy is an education company. They committed in building the learning experience of the future.</p>
         <div id="img-div">
-            <img src="https://lh3.google.com/u/0/d/1m_2AfYd-kj3SWFpIYX2QxCXXpDMUHK8w=w1227-h862-iv1" alt="Codecademy" width="770px">
+            <img src="https://previews.dropbox.com/p/thumb/ABQJ9bSScU85jjj3h3NmecK4QACCEk7e-Ua79pqVSCPz4SFFvCYUvYg6lH3vogi79-9HQ83dhlAdfAd6UZiMtpOq3gzvn_Pl0sfq7MsXw78yvVucTt1f04w0jN-JCvG9UxZTjc3zfaTUbCPVsR7ZPk1vein5vgwQlY6uwJ3QvKItID9WxRRiSNRN2XdokCggn7bVC1f6lrPD0h2rMfRSM5jltfYkXGWDki9naStsSX5SNj7JMbety617_wibxmov59MCl8xSPhRQfS-OekcLL5dNkYIRMsZHKeus_-jw9HE0qehN1zh8ffimFizlwEBNFtmc-hUGPnABGMzPWMZIhao2WIqujOpkQLgRWNDSPsDHvQ/p.png?fv_content=true&size_mode=5" alt="Codecademy" width="770px">
             <figcaption>Codecademy is a website dedicated specifically to teaching coding. Where other coding sites follow an example/practice session workflow, Codecademy includes a live practice window. This means you can practice coding while still viewing the lesson material.</figcaption>
         </div>
         <div id="tribute-info">
