--- a/demopages/restaurant/restaurant.html
+++ b/demopages/restaurant/restaurant.html
@@ -256,8 +256,8 @@ left: 0px;
     <div class="position2">
       <div class="closeToheader"> <img src="https://lh3.googleusercontent.com/proxy/_moK0FUbWAzVVhtXb0moLLSVhSI3SnrQeqIoQZqxtKaYPXelYAWb6Gp7dgU8ff0-b1M9l07eDWfWRSpreEoRPAXzPFWdxmzxymKLrBkdSFoRicScVplINKC8co3vLrE84EcJPlYSY2E" width="2000px" height="300px">      
       <img  class="h2closeh" src="https://spavi-noo-prod.s3.ap-southeast-1.amazonaws.com/s3fs-public/images/custom-blocks/text%20choose%20order.png">
-      <img class="imgcloseh" src="https://lh3.google.com/u/0/d/1kRVi8kAEUnaS2crO88KFqK9I2_jflfsl=w1920-h979-iv1">
-      <img class="imgcloseh2" src="https://lh3.google.com/u/0/d/11gOBnwo-3UDkfUy7gxf7wBYb3nIlV3wR=w1920-h671-iv1">
+      <img class="imgcloseh" src="https://i.ibb.co/Yp4gYLS/deliver.png">
+      <img class="imgcloseh2" src="https://i.ibb.co/XtLMQfG/pickup.png">
       </div>
       
       <div class="slide-container">
