--- a/demopages/restaurant/restaurant.html
+++ b/demopages/restaurant/restaurant.html
@@ -235,9 +235,9 @@ left: 0px;
 </head>
 <body>
     <nav class="navbar">
-        <a href="restaurant.html" class ="nav-logo">Pizzary</a>
+        <a href="/ravenpauladrales/demopages/restaurant/restaurant.html" class ="nav-logo">Pizzary</a>
      <ul>
-         <li><a href="restaurant.html">Home</a></li>
+         <li><a href="/ravenpauladrales/demopages/restaurant/restaurant.html">Home</a></li>
          <li>
             <div class="dropdown">
             <a class="dropbtn">Menu</a>
@@ -249,7 +249,7 @@ left: 0px;
           </div>
          </li>
          <li><a href="#">Contacts</a></li>
-         <li><a href="restaurant.html">About Us</a></li>
+         <li><a href="/ravenpauladrales/demopages/restaurant/restaurant.html">About Us</a></li>
      </ul>
  </nav>
 
@@ -265,9 +265,9 @@ left: 0px;
         <span id="slider-image2"></span>
         <span id="slider-image3"></span>
         <div class="image-container">
-            <img src="https://lh3.google.com/u/0/d/1ytNDSXBxofVmQyPaut49kvazJNnwrotL=w1920-h979-iv1" class="slider-image">
-            <img src="https://lh3.google.com/u/0/d/1uctFTxS_mhzEUl1w95MiFBSeGw_41n3m=w1920-h671-iv1" class="slider-image">
-            <img src="https://lh3.google.com/u/0/d/1jrvvw1Bh9MXE9tPEc57xzHiKsmmgJeIp=w1920-h979-iv1" class="slider-image">
+            <img src="https://cache.dominos.com/wam/prod/market/PH/_en/images/promo/cb6a563a-31b8-4e9b-b45b-f6f14e5df39f.jpg" class="slider-image">
+            <img src="https://cache.dominos.com/wam/prod/market/PH/_en/images/promo/895ead0d-c929-416c-a83a-67238962556f.jpg" class="slider-image">
+            <img src="https://cache.dominos.com/wam/prod/market/PH/_en/images/promo/f761b3fb-eb87-4a69-ae96-db88bdc9cb1d.jpg" class="slider-image">
         </div>
         <div class="button-container">
             <a href="#slider-image1" class="slider-button"></a>
