--- a/demopages/gallery/gallery.html
+++ b/demopages/gallery/gallery.html
@@ -150,9 +150,9 @@ footer{
 </head>
 <body>
     <nav class="navbar">
-        <a href="gallery.html" class ="nav-logo">Gallery</a>
+        <a href="/ravenpauladrales/demopages/gallery/gallery.html" class ="nav-logo">Gallery</a>
      <ul>
-         <li><a href="gallery.html">Home</a></li>
+         <li><a href="/ravenpauladrales/demopages/gallery/gallery.html">Home</a></li>
          <li>
             <div class="dropdown">
             <a class="dropbtn">Trends</a>
@@ -164,7 +164,7 @@ footer{
           </div>
          </li>
          <li><a href="#">Contacts</a></li>
-         <li><a href="gallery.html">About Me</a></li>
+         <li><a href="/ravenpauladrales/demopages/gallery/gallery.html">About Me</a></li>
      </ul>
  </nav>
     <div class="position2">
