--- a/demopages/restaurant/restaurant.html
+++ b/demopages/restaurant/restaurant.html
@@ -254,7 +254,7 @@ left: 0px;
  </nav>
 
     <div class="position2">
-      <div class="closeToheader"> <img src="https://lh3.googleusercontent.com/proxy/ufGakZfNd_RQ847BLWezihECgGVeIuP3JeKDth6eDPAAeiIgl1wptWZQGj9nIchtPLOYGO0utlRRZIC5RYlnonPKxCL5MmosUGeoR85hd4dVdu1JFrlkwsvSreS_VbCjfzlWDepRlQg" width="2000px" height="300px">      
+      <div class="closeToheader"> <img src="https://i.ibb.co/Y2NpfQ3/header.png" width="2000px" height="300px">      
       <img  class="h2closeh" src="https://spavi-noo-prod.s3.ap-southeast-1.amazonaws.com/s3fs-public/images/custom-blocks/text%20choose%20order.png">
       <img class="imgcloseh" src="https://i.ibb.co/Yp4gYLS/deliver.png">
       <img class="imgcloseh2" src="https://i.ibb.co/XtLMQfG/pickup.png">
