--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ footer{
             <p id="p1">I'm Raven Paul S. Adrales, on my Second Year of Bachelor of Science in Information Technology at University of Immaculate Concepcion, currently taking the course Web Development.</p>
             <p id="p2">I'm still an amateur in this field but through experience I will bloom and will become a much better Web Developer. This is where you will see my progress all throughout the course.</p></p>
             
-            <button class="btns1">Get Started</button>
+            <button class="btns1"><a href="/ravenpauladrales/myreviewonecmascript.html">Review on EcmaScript</a></button>
             <button class="btns2">Learn More</button>
         </div>
         <div>
