--- a/calendar.html
+++ b/calendar.html
@@ -136,7 +136,7 @@ table, td, th {
       </tbody></table>
     </div>
     <div> 
-        <a id="button2" href="\">Go Back</a>
+        <a id="button2" href="/ravenpauladrales/index.html">Go Back</a>
     </div>
 </div>
     
