--- a/demopages/form/vaccination.html
+++ b/demopages/form/vaccination.html
@@ -227,7 +227,7 @@
                         <input type="submit" value="Register">
                     </div>
                     <div > 
-                        <a id="button2" href="\">Go Back</a>
+                        <a id="button2" href="/ravenpauladrales">Go Back</a>
                     </div>
             </form>
         </div>
