--- a/demopages/gallery/gallery.html
+++ b/demopages/gallery/gallery.html
@@ -155,7 +155,7 @@ footer{
     <nav class="navbar">
         <a href="/ravenpauladrales/demopages/gallery/gallery.html" class ="nav-logo">Gallery</a>
      <ul>
-         <li><a href="/index.html">Home</a></li>
+         <li><a href="/ravenpauladrales/index.html">Home</a></li>
          <li>
             <div class="dropdown">
             <a class="dropbtn">Trends</a>
