--- a/demopages/restaurant/restaurant.html
+++ b/demopages/restaurant/restaurant.html
@@ -350,7 +350,7 @@ header {
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/ravenpauladrales">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#services">Service</a></li>
@@ -434,19 +434,19 @@ header {
         <div class="servives-container">
             <!-- Box 1 -->
             <div class="s-box">
-                <img src="images/order.png" alt="">
+                <img src="/ravenpauladrales/demopages/images/order.png" alt="">
                 <h3>You Order</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit ea fugiat esse tempore ipsum temporibus.</p>
             </div>
             <!-- Box 2 -->
             <div class="s-box">
-                <img src="images/delivery-truck.png" alt="">
+                <img src="/ravenpauladrales/demopages/images/delivery-truck.png" alt="">
                 <h3>Shipping</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit ea fugiat esse tempore ipsum temporibus.</p>
             </div>
             <!-- Box 3 -->
             <div class="s-box">
-                <img src="images/shipping.png" alt="">
+                <img src="/ravenpauladrales/demopages/images/shipping.png" alt="">
                 <h3>Delivered</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit ea fugiat esse tempore ipsum temporibus.</p>
             </div>
