--- a/index.html
+++ b/index.html
@@ -596,14 +596,14 @@ img,video{
     
     </h2><div class="-my-8 group pt-32 pb-40 md:py-0">
       <!--  start choice  --> 
-        <article  class="bg-dusk transition md:group-hover:opacity-50 md:hover:opacity-important md:hover:scale-11/10x my-8"><a href="/demopages/gallery/gallery.html" class="block p-40">
+        <article  class="bg-dusk transition md:group-hover:opacity-50 md:hover:opacity-important md:hover:scale-11/10x my-8"><a href="/ravenpauladrales/demopages/gallery/gallery.html" class="block p-40">
         <p class="text-xs font-bold tracking-widest uppercase text-zenith">  Html Demopage</p>
           <h3 itemprop="name" class="mt-8 text-lg font-semibold leading-tight text-zenith">
           Gallery
         </h3><p class="mt-8">Showcase of trends: Learing, Bio & Health and Internet of Things(IoT).</p><div class="flex items-center mt-16">
         </div></a></article>
   <!-- choice  --> 
-        <article class="bg-dusk transition md:group-hover:opacity-50 md:hover:opacity-important md:hover:scale-11/10x my-8"><a href="/demopages/restaurant/restaurant.html" class="block p-40"><p class="text-xs font-bold tracking-widest uppercase text-zenith">
+        <article class="bg-dusk transition md:group-hover:opacity-50 md:hover:opacity-important md:hover:scale-11/10x my-8"><a href="/ravenpauladrales/demopages/restaurant/restaurant.html" class="block p-40"><p class="text-xs font-bold tracking-widest uppercase text-zenith">
           Html Demopage
         </p><h3 itemprop="name" class="mt-8 text-lg font-semibold leading-tight text-zenith">
           Restaurant
@@ -611,7 +611,7 @@ img,video{
  
 <!-- choice  --> 
 
-     <article class="bg-dusk transition md:group-hover:opacity-50 md:hover:opacity-important md:hover:scale-11/10x my-8"><a href="/demopages/tribute/tribute.html" class="block p-40"><p class="text-xs font-bold tracking-widest uppercase text-zenith">
+     <article class="bg-dusk transition md:group-hover:opacity-50 md:hover:opacity-important md:hover:scale-11/10x my-8"><a href="/ravenpauladrales/demopages/tribute/tribute.html" class="block p-40"><p class="text-xs font-bold tracking-widest uppercase text-zenith">
       Html Demopage
     </p><h3 itemprop="name" class="mt-8 text-lg font-semibold leading-tight text-zenith">
       Tribute
@@ -620,7 +620,7 @@ img,video{
        </span></div></a></article>
  
 <!-- choice  --> 
-  <article class="bg-dusk transition md:group-hover:opacity-50 md:hover:opacity-important md:hover:scale-11/10x my-8"><a href="/demopages/form/vaccination.html" class="block p-40"><p class="text-xs font-bold tracking-widest uppercase text-zenith">
+  <article class="bg-dusk transition md:group-hover:opacity-50 md:hover:opacity-important md:hover:scale-11/10x my-8"><a href="/ravenpauladrales/demopages/form/vaccination.html" class="block p-40"><p class="text-xs font-bold tracking-widest uppercase text-zenith">
         Html Demopage
       </p><h3 itemprop="name" class="mt-8 text-lg font-semibold leading-tight text-zenith">
         Form
@@ -643,7 +643,7 @@ img,video{
       My Birthday</p>
     </div></header><div class="flex flex-col mt-24"><h3 itemprop="name" class="text-lg font-semibold leading-tight text-zenith">
       Calendar
-    </h3><footer class="mt-16"><ul class="flex -mx-8"><li class="mx-8"><a href="/calendar.html" class="flex items-center mt-px text-zenith"><span>Link</span><span class="block w-16 p-2 ml-4 text-dawn"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 12 12" aria-hidden="true" class="flex-none stroke-current"><title>External link icon</title><path d="M10.976 1.193A.314.314 0 0010.687 1H6.312a.313.313 0 000 .625h3.62L5.467 6.091a.313.313 0 00.443.442l4.466-4.466v3.62a.313.313 0 00.625 0V1.313a.328.328 0 00-.024-.119z"></path><path d="M3.5 1v.625H2.25a.625.625 0 00-.625.625v7.5c0 .345.28.625.625.625h7.5c.345 0 .625-.28.625-.625V8.5H11v1.875c0 .345-.28.625-.625.625h-8.75A.625.625 0 011 10.375v-8.75C1 1.28 1.28 1 1.625 1H3.5z"></path></svg></span></a></li></ul></footer><!----></div></div></article>
+    </h3><footer class="mt-16"><ul class="flex -mx-8"><li class="mx-8"><a href="/ravenpauladrales/calendar.html" class="flex items-center mt-px text-zenith"><span>Link</span><span class="block w-16 p-2 ml-4 text-dawn"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 12 12" aria-hidden="true" class="flex-none stroke-current"><title>External link icon</title><path d="M10.976 1.193A.314.314 0 0010.687 1H6.312a.313.313 0 000 .625h3.62L5.467 6.091a.313.313 0 00.443.442l4.466-4.466v3.62a.313.313 0 00.625 0V1.313a.328.328 0 00-.024-.119z"></path><path d="M3.5 1v.625H2.25a.625.625 0 00-.625.625v7.5c0 .345.28.625.625.625h7.5c.345 0 .625-.28.625-.625V8.5H11v1.875c0 .345-.28.625-.625.625h-8.75A.625.625 0 011 10.375v-8.75C1 1.28 1.28 1 1.625 1H3.5z"></path></svg></span></a></li></ul></footer><!----></div></div></article>
 
     <article class="flex-none w-full my-4 md:m-4 md:w-240 md:min-h-240 lg:w-320 lg:min-h-320"  style="transform: translateY(0px);"><div class="flex flex-col justify-between w-full h-full p-40 min-h-inherit bg-dusk md:group-hover:opacity-50 md:hover:scale-11/10x md:hover:opacity-important transition"><header><h4 itemprop="name" class="text-xs font-bold tracking-widest uppercase text-zenith">
      Details
@@ -671,7 +671,7 @@ img,video{
     
   
   </div></div></div><div class="fixed bottom-0 left-0 z-20 w-full h-32 pointer-events-none gradient-y-transparent-night"></div><div class="fixed top-0 left-0 z-20 w-full h-32 pointer-events-none gradient-y-night-transparent"></div><div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"><div class="resize-sensor-expand" style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"><div style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 1450px; height: 10px;"></div></div><div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; inset: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"><div style="position: absolute; left: 0px; top: 0px; transition: all 0s ease 0s; width: 200%; height: 200%;"></div></div></div></div>
-  <script src="/assets/js/app.9e60478e.js" defer=""></script><script src="/assets/js/page--src--pages--index-vue.dbd8fedd.js" defer=""></script>
+  
  
 
 </body>
