--- a/demopages/form/results.html
+++ b/demopages/form/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Result</title>
     <style>
           *{
            margin: 0;
@@ -75,7 +75,7 @@
     <div class="modal-content">
         <div class="title">Schedule Details</div>
     <div id="results"></div>
-    <a id="button2" href="\">Go Back to Digital Portfolio</a>
+    <a id="button2" href="/ravenpauladrales/index.html">Go Back to Digital Portfolio</a>
  </div>
  
  <script>
