--- a/demopages/trends/biohealth.html
+++ b/demopages/trends/biohealth.html
@@ -123,7 +123,7 @@ h1 {
             </div>
         </div>
         <div > 
-            <a id="button2" href="\">Go Back</a>
+            <a id="button2" href="/ravenpauladrales/index.html">Go Back</a>
         </div>
     </div>
     
