--- a/demopages/trends/biohealth.html
+++ b/demopages/trends/biohealth.html
@@ -110,15 +110,15 @@ h1 {
                 </p>
             </div>
             <div>
-              <i>For more Details: <a href="https://www.fdmgroup.com/5-exciting-uses-for-virtual-reality/">Link-1</a> <a href="https://www.iberdrola.com/innovation/virtual-reality">Link-2</a></i>
+              <i>For more Details: <a target="_blank" href="https://www.fdmgroup.com/5-exciting-uses-for-virtual-reality/">Link-1</a> <a target="_blank" href="https://www.iberdrola.com/innovation/virtual-reality">Link-2</a></i>
             </div>
            
             </iframe>
             <div>
                 <h3> Sources </h3>
                 <ul>
-                    <li><a href="https://www.iberdrola.com/innovation/virtual-reality">https://www.iberdrola.com/innovation/virtual-reality</a></li>
-                    <li><a href="https://www.fdmgroup.com/5-exciting-uses-for-virtual-reality/">https://www.fdmgroup.com/5-exciting-uses-for-virtual-reality/</a></li>
+                    <li><a target="_blank" href="https://www.iberdrola.com/innovation/virtual-reality">https://www.iberdrola.com/innovation/virtual-reality</a></li>
+                    <li><a target="_blank" href="https://www.fdmgroup.com/5-exciting-uses-for-virtual-reality/">https://www.fdmgroup.com/5-exciting-uses-for-virtual-reality/</a></li>
                 </ul>
             </div>
         </div>
