--- a/demopages/trends/iot.html
+++ b/demopages/trends/iot.html
@@ -105,17 +105,17 @@ h1 {
             
             <div>
                 <i>You also don't have to upgrade to Windows 11 right away if you don't want to -- Microsoft will still support Windows 10 through October 2025. For more, check out the every big difference between Windows 10 and Windows 11, and what you'll need to do before you upgrade to Windows 11 for</i>
-                    <a href="https://www.cnet.com/tech/computing/windows-11-vs-windows-10-what-to-know/">More Details.</a>
-                    <i> And also Click "<a href="https://www.youtube.com/watch?v=YHF2m-8wQdg"> HERE</a>" to check for compatibility. </i>
+                    <a target="_blank" href="https://www.cnet.com/tech/computing/windows-11-vs-windows-10-what-to-know/">More Details.</a>
+                    <i> And also Click "<a target="_blank" href="https://www.youtube.com/watch?v=YHF2m-8wQdg"> HERE</a>" to check for compatibility. </i>
             </div>
            
             </iframe>
             <div>
                 <h3> Sources </h3>
                 <ul>
-                    <li><a href="https://www.cnet.com/tech/computing/windows-11-vs-windows-10-what-to-know/">https://www.cnet.com/tech/computing/windows-11-vs-windows-10-what-to-know/</a></li>
-                    <li> <a href="https://www.cnet.com/tech/computing/windows-11-what-you-need-to-know-about-the-beta-release-date-new-features-and-more/">https://www.cnet.com/tech/computing/windows-11-what-you-need-to-know-about-the-beta-release-date-new-features-and-more/</a></li>
-                    <li> <a href="https://www.youtube.com/watch?v=YHF2m-8wQdg">https://www.youtube.com/watch?v=YHF2m-8wQdg</a></li>
+                    <li><a target="_blank" href="https://www.cnet.com/tech/computing/windows-11-vs-windows-10-what-to-know/">https://www.cnet.com/tech/computing/windows-11-vs-windows-10-what-to-know/</a></li>
+                    <li> <a target="_blank" href="https://www.cnet.com/tech/computing/windows-11-what-you-need-to-know-about-the-beta-release-date-new-features-and-more/">https://www.cnet.com/tech/computing/windows-11-what-you-need-to-know-about-the-beta-release-date-new-features-and-more/</a></li>
+                    <li> <a target="_blank" href="https://www.youtube.com/watch?v=YHF2m-8wQdg">https://www.youtube.com/watch?v=YHF2m-8wQdg</a></li>
                 </ul>
             </div>
         </div>
