--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ img,video{
     }
 }
    </style>
-    <title>Document</title>
+    <title>Digital Portfolio</title>
 </head>
 <body class="bg-night overflow-x-hidden" data-vue-tag="%7B%22class%22:%7B%22ssr%22:%22bg-night%20overflow-x-hidden%22%7D%7D">
   <div id="app" class="relative flex flex-col w-screen mx-auto font-sans text-base max-w-1440 text-dawn md:flex-row">
