--- a/demopages/responsive/responsive.html
+++ b/demopages/responsive/responsive.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-success navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-success navbar-dark py-3">
         <div class="container">
             <a href="#" class="navbar-brand">Raven Paul Adrales</a>
            
