--- a/demopages/responsive/responsive.html
+++ b/demopages/responsive/responsive.html
@@ -57,7 +57,7 @@
                   <span class="fw-bold">Main Location:</span> Tagum City
                 </li>
                 <li class="list-group-item">
-                  <span class="fw-bold">Student Phone:</span> +639760224120
+                  <span class="fw-bold">Student Phone:</span> +639760224***
                 </li>
                 <li class="list-group-item">
                   <span class="fw-bold">Student Email:</span>
