--- a/demopages/responsive/responsive.html
+++ b/demopages/responsive/responsive.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#home" class="nav-link">Home</a>
+                        <a href="/ravenpauladrales/index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="#map" class="nav-link">Map</a>
