--- a/index.html
+++ b/index.html
@@ -659,6 +659,17 @@ img,video{
       <title>External link icon</title><path d="M10.976 1.193A.314.314 0 0010.687 1H6.312a.313.313 0 000 .625h3.62L5.467 6.091a.313.313 0 00.443.442l4.466-4.466v3.62a.313.313 0 00.625 0V1.313a.328.328 0 00-.024-.119z"></path>
       <path d="M3.5 1v.625H2.25a.625.625 0 00-.625.625v7.5c0 .345.28.625.625.625h7.5c.345 0 .625-.28.625-.625V8.5H11v1.875c0 .345-.28.625-.625.625h-8.75A.625.625 0 011 10.375v-8.75C1 1.28 1.28 1 1.625 1H3.5z"></path></svg></span></a></li></ul></footer><!----></div></div></article>
 
+      <article class="flex-none w-full my-4 md:m-4 md:w-240 md:min-h-240 lg:w-320 lg:min-h-320"><div class="flex flex-col justify-between w-full h-full p-40 min-h-inherit bg-dusk md:group-hover:opacity-50 md:hover:scale-11/10x md:hover:opacity-important transition"><header><h4 itemprop="name" class="text-xs font-bold tracking-widest uppercase text-zenith">
+        Html Demopage
+      </h4><div class="flex flex-col mt-8"><p>
+      Responsive Website</p>
+      </div></header><div class="flex flex-col mt-24"><h3 itemprop="name" class="text-lg font-semibold leading-tight text-zenith">
+        Nav Bar & Contact Info Map
+      </h3><footer class="mt-16"><ul class="flex -mx-8"><li class="mx-8"><a href="/ravenpauladrales/demopages/responsive/responsive.html" class="flex items-center mt-px text-zenith"><span>Link</span><span class="block w-16 p-2 ml-4 text-dawn">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 12 12" aria-hidden="true" class="flex-none stroke-current">
+      <title>External link icon</title><path d="M10.976 1.193A.314.314 0 0010.687 1H6.312a.313.313 0 000 .625h3.62L5.467 6.091a.313.313 0 00.443.442l4.466-4.466v3.62a.313.313 0 00.625 0V1.313a.328.328 0 00-.024-.119z"></path>
+      <path d="M3.5 1v.625H2.25a.625.625 0 00-.625.625v7.5c0 .345.28.625.625.625h7.5c.345 0 .625-.28.625-.625V8.5H11v1.875c0 .345-.28.625-.625.625h-8.75A.625.625 0 011 10.375v-8.75C1 1.28 1.28 1 1.625 1H3.5z"></path></svg></span></a></li></ul></footer><!----></div></div></article>
+
     <article class="flex-none w-full my-4 md:m-4 md:w-240 md:min-h-240 lg:w-320 lg:min-h-320"  style="transform: translateY(0px);"><div class="flex flex-col justify-between w-full h-full p-40 min-h-inherit bg-dusk md:group-hover:opacity-50 md:hover:scale-11/10x md:hover:opacity-important transition"><header><h4 itemprop="name" class="text-xs font-bold tracking-widest uppercase text-zenith">
      Details
     </h4><div class="flex flex-col mt-8"><p>
