--- a/myreviewonecmascript.html
+++ b/myreviewonecmascript.html
@@ -103,9 +103,9 @@
             <div>
                 <h3> Video Materials  </h3>
                 <ul>
-                    <li><a href="https://youtu.be/NQUjEo9iqfo">History of Javascript | ecmascript</a></li>
-                    <li><a href="https://youtu.be/Nda34efbxhM">What is Vanilla Javascript?</a></li>
-                    <li><a href="https://youtu.be/YG4-l3VaOWc">What's Google Saying about JavaScript in 2021?</a></li>
+                    <li><a target="_blank" href="https://youtu.be/NQUjEo9iqfo">History of Javascript | ecmascript</a></li>
+                    <li><a target="_blank" href="https://youtu.be/Nda34efbxhM">What is Vanilla Javascript?</a></li>
+                    <li><a target="_blank" href="https://youtu.be/YG4-l3VaOWc">What's Google Saying about JavaScript in 2021?</a></li>
                 </ul>
                 
             </div>
