--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ img,video{
       
       <div class="static flex flex-col justify-between w-full p-32 md:max-w-408 lg:max-w-496 md:fixed md:h-screen lg:py-88 lg:pl-88 md:pr-0">
         <div class="flex flex-col"><div>
-          <img alt="Raven" src="https://i.ibb.co/Bfj7dJQ/ven.jpg" width="400" data-src="https://i.ibb.co/Bfj7dJQ/ven.jpg" data-srcset="https://i.ibb.co/Bfj7dJQ/ven.jpg 400w" data-sizes="(max-width: 400px) 100vw, 400px" class="cic rounded-full g-image g-image--lazy g-image--loaded" srcset="https://i.ibb.co/Bfj7dJQ/ven.jpg 400w" sizes="(max-width: 400px) 100vw, 400px">
+          <img alt="Raven" src="https://i.ibb.co/gmGMp30/ven.jpg" width="400" data-src="https://i.ibb.co/gmGMp30/ven.jpg" data-srcset="https://i.ibb.co/gmGMp30/ven.jpg 400w" data-sizes="(max-width: 400px) 100vw, 400px" class="cic rounded-full g-image g-image--lazy g-image--loaded" srcset="https://i.ibb.co/gmGMp30/ven.jpg 400w" sizes="(max-width: 400px) 100vw, 400px">
      
     <h1 class="text-2xl font-bold leading-tight lg:text-4xl lg:leading-none text-zenith"> Hello, I’m Raven Paul Adrales. </h1>
     <div class="leading-loose"><p class="mt-32 jus" >
