--- a/demopages/webappidea/webappidea.html
+++ b/demopages/webappidea/webappidea.html
@@ -415,7 +415,7 @@
 
 <div class="container text-center pb-3 mb-5">
 		<a target="_blank" href="https://docs.google.com/presentation/d/1d0hNOBDdFF30wfvBmJR2_rwXVLnv6PDUY7kuU-ErpvQ/edit" class="btn btn-lg btn-light">NSDB Slides</a>
-		<a target="_blank" href="" class="btn btn-lg btn-light">Youtube Link For Learn Davao</a>
+		<a target="_blank" href="https://www.youtube.com/watch?v=3X5az0tVIJQ" class="btn btn-lg btn-light">Youtube Link For Learn Davao</a>
 </div>
 
 
