--- a/demopages/form/results.html
+++ b/demopages/form/results.html
@@ -75,7 +75,7 @@
     <div class="modal-content">
         <div class="title">Schedule Details</div>
     <div id="results"></div>
-    <a id="button2" href="/ravenpauladrales/index.html">Go Back to Digital Portfolio</a>
+    <a id="button2" href="https://radrales.github.io/ravenpauladrales/index.html">Go Back to Digital Portfolio</a>
  </div>
  
  <script>
