--- a/demopages/gallery/gallery.html
+++ b/demopages/gallery/gallery.html
@@ -155,7 +155,7 @@ footer{
     <nav class="navbar">
         <a href="https://radrales.github.io/ravenpauladrales/demopages/gallery/gallery.html" class ="nav-logo">Gallery</a>
      <ul>
-         <li><a href="https://radrales.github.io/ravenpauladrales/index.html">Landing Page</a></li>
+         <li><a href="https://ravenpauladrales.herokuapp.com/">Landing Page</a></li>
          
      </ul>
  </nav>
