--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <style>
+
+       
         .fir{
             --bg-opacity:1;
                 background-color:#151515;
@@ -230,7 +232,8 @@
             margin-top:16px;
         }
        
-   
+            /* bootsrap start*/
+
         html{
     line-height:1.15;-webkit-text-size-adjust:100%
 }
@@ -847,7 +850,8 @@
     .lg\:w-320{
         width:320px
     }
-}
+    }
+      /* bootsrap end*/
    </style>
     <title>Digital Portfolio</title>
 </head>  
