--- a/calendar.html
+++ b/calendar.html
@@ -136,7 +136,7 @@ table, td, th {
       </tbody></table>
     </div>
     <div> 
-        <a id="button2" href="https://radrales.github.io/ravenpauladrales/index.html">Go Back</a>
+        <a id="button2" href="https://ravenpauladrales.herokuapp.com/">Go Back</a>
     </div>
 </div>
     
