--- a/demopages/form/vaccination.html
+++ b/demopages/form/vaccination.html
@@ -227,7 +227,7 @@
                         <input type="submit" value="Register">
                     </div>
                     <div > 
-                        <a id="button2" href="https://ravenpauladrales.herokuapp.com/">Go Back</a>
+                        <a id="button2" href="https://radrales.github.io/ravenpauladrales/index.html">Go Back</a>
                     </div>
             </form>
         </div>
