--- a/demopages/responsive/responsive.html
+++ b/demopages/responsive/responsive.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="https://ravenpauladrales.herokuapp.com/" class="nav-link">Landing Page</a>
+                        <a href="https://radrales.github.io/ravenpauladrales/index.html" class="nav-link">Landing Page</a>
                     </li>
                     <li class="nav-item">
                         <a href="#map" class="nav-link">Map</a>
