--- a/webappidea.html
+++ b/webappidea.html
@@ -318,7 +318,7 @@
 			
 		                <ul class="navbar-nav">
 		                    <li class="nav-item">
-		                    <a class="nav-link" href="https://ravenpauladrales.herokuapp.com/">Landing Page</a>
+		                    <a class="nav-link" href="https://radrales.github.io/ravenpauladrales/index.html">Landing Page</a>
 		                  </li>
 	
 		                <li class="nav-item">
