--- a/learning.html
+++ b/learning.html
@@ -117,7 +117,7 @@ h1 {
             </div>
         </div>
         <div > 
-            <a id="button2" href="https://radrales.github.io/ravenpauladrales/demopages/gallery/gallery.html">Go Back</a>
+            <a id="button2" href="/gallery.html">Go Back</a>
         </div>
     </div>
 </body>
