--- a/tribute.html
+++ b/tribute.html
@@ -142,7 +142,7 @@
             
         </div>
         <div > 
-            <a id="button2" href="https://radrales.github.io/ravenpauladrales/index.html">Go Back</a>
+            <a id="button2" href="/index.html">Go Back</a>
         </div>
     </div>
 </body>
