--- a/webappidea.html
+++ b/webappidea.html
@@ -318,7 +318,7 @@
 			
 		                <ul class="navbar-nav">
 		                    <li class="nav-item">
-		                    <a class="nav-link" href="https://radrales.github.io/ravenpauladrales/index.html">Landing Page</a>
+		                    <a class="nav-link" href="/index.html">Landing Page</a>
 		                  </li>
 	
 		                <li class="nav-item">
@@ -431,7 +431,7 @@
 		<div class="col-lg-6 col-md-12">
 			<ul class="nav justify-content-center">
 			  <li class="nav-item">
-			    <a class="nav-link active" href="https://ravenpauladrales.herokuapp.com/">Landing Page</a>
+			    <a class="nav-link active" href="/index.html">Landing Page</a>
 			  </li>
 			 
 			  <li class="nav-item">
