--- a/index.html
+++ b/index.html
@@ -864,9 +864,9 @@
       <div class="fir6"></div></div>
       <div class="sup mdsup lgsup">
         <div class="flcolm"><div>
-          <img alt="Raven" src="https://i.ibb.co/gmGMp30/ven.jpg" width="400" data-src="https://i.ibb.co/gmGMp30/ven.jpg" 
-          data-srcset="https://i.ibb.co/gmGMp30/ven.jpg 400w" data-sizes="(max-width: 400px) 100vw, 400px" class="cic" 
-          srcset="https://i.ibb.co/gmGMp30/ven.jpg 400w" sizes="(max-width: 400px) 100vw, 400px">
+          <img alt="Raven" src="https://i.ibb.co/GkdBTcH/ven.jpg" width="400" data-src="https://i.ibb.co/GkdBTcH/ven.jpg" 
+          data-srcset="https://i.ibb.co/GkdBTcH/ven.jpg 400w" data-sizes="(max-width: 400px) 100vw, 400px" class="cic" 
+          srcset="https://i.ibb.co/GkdBTcH/ven.jpg 400w" sizes="(max-width: 400px) 100vw, 400px">
      
     <h1 class="teext lgteext"> Hello, I’m Raven Paul Adrales. </h1>
     <div class="leading-loose"><p class="teext2">
