--- a/restaurant.html
+++ b/restaurant.html
@@ -350,7 +350,7 @@ header {
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="/index.html">Landing Page</a></li>
+            <li><a href="https://radrales.github.io/ravenpauladrales/index.html">Landing Page</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#services">Service</a></li>
