--- a/vaccination.html
+++ b/vaccination.html
@@ -178,7 +178,7 @@
 <body>
         <div class="modal-content">
           <div class="title">Schedule Form</div>
-            <form action="/results.html" method="GET">
+            <form action="https://radrales.github.io/ravenpauladrales/results.html" method="GET">
              <div class="user-details">
                  <div class="input-box">
                     <span class="details">First Name:</span>
@@ -227,7 +227,7 @@
                         <input type="submit" value="Register">
                     </div>
                     <div > 
-                        <a id="button2" href="/index.html">Go Back</a>
+                        <a id="button2" href="https://radrales.github.io/ravenpauladrales/index.html">Go Back</a>
                     </div>
             </form>
         </div>
