--- a/biohealth.html
+++ b/biohealth.html
@@ -123,7 +123,7 @@ h1 {
             </div>
         </div>
         <div > 
-            <a id="button2" href="https://radrales.github.io/ravenpauladrales/gallery.html">Go Back</a>
+            <a id="button2" href="https://leonlau4148.github.io/ravenpauladrales/gallery.html">Go Back</a>
         </div>
     </div>
     
