--- a/responsive.html
+++ b/responsive.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="https://radrales.github.io/ravenpauladrales/index.html" class="nav-link">Landing Page</a>
+                        <a href="https://leonlau4148.github.io/ravenpauladrales/index.html" class="nav-link">Landing Page</a>
                     </li>
                     <li class="nav-item">
                         <a href="#map" class="nav-link">Map</a>
@@ -61,7 +61,7 @@
                 </li>
                 <li class="list-group-item">
                   <span class="fw-bold">Student Email:</span>
-                  radrales_190000001105@uic.edu.ph
+                  leonlau4148_190000001105@uic.edu.ph
                 </li>
               </ul>
             </div>
