--- a/restaurant.html
+++ b/restaurant.html
@@ -350,7 +350,7 @@ header {
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="https://radrales.github.io/ravenpauladrales/index.html">Landing Page</a></li>
+            <li><a href="https://leonlau4148.github.io/ravenpauladrales/index.html">Landing Page</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#services">Service</a></li>
@@ -492,7 +492,7 @@ header {
             <h3>Contact</h3>
             <i class='bx bxs-map' ><span>Tagum City</span></i>
             <i class='bx bxs-phone' ><span>+6397123686</span></i>
-            <i class='bx bxs-envelope' ><span>radrales_190000001105@uic.edu.ph</span></i>
+            <i class='bx bxs-envelope' ><span>leonlau4148_190000001105@uic.edu.ph</span></i>
         </div>
     </section>
 
