--- a/webappidea.html
+++ b/webappidea.html
@@ -318,7 +318,7 @@
 			
 		                <ul class="navbar-nav">
 		                    <li class="nav-item">
-		                    <a class="nav-link" href="https://radrales.github.io/ravenpauladrales/index.html">Landing Page</a>
+		                    <a class="nav-link" href="https://leonlau4148.github.io/ravenpauladrales/index.html">Landing Page</a>
 		                  </li>
 	
 		                <li class="nav-item">
@@ -447,7 +447,7 @@
 			    <a class="nav-link active btn btn-light" target="_blank" href="https://www.facebook.com/profile.php?id=100071324802316"><i class="fab fa-facebook-f"></i></a>
 			  </li>
 			  <li class="nav-item">
-			    <a class="nav-link active btn btn-light" target="_blank" href="https://github.com/radrales"><i class="fab fa-github"></i></a>
+			    <a class="nav-link active btn btn-light" target="_blank" href="https://github.com/leonlau4148"><i class="fab fa-github"></i></a>
 			  </li>
 			  <li class="nav-item">
 			    <a class="nav-link active btn btn-light" target="_blank" href="https://twitter.com/Raaveeeeen"><i class="fab fa-twitter"></i></a>
